# IMPLEMENTASI-PMB

./: .coverage  .gitignore  AI_USAGE_LOG.md  API_EXAMPLES.md  FINAL_VERIFICATION.md  Implementasi PMB.txt  PROJECT_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  cli_register.py  database.py  main.py  models.py  pmb.db  pyproject.toml  requirements.txt  run_server.py  schemas.py  seed_data.py  server.err  simple_test_api.py  test.db  test_api.py  test_flow.py  test_utils.db  utils.py
alembic/: env.py
alembic/versions/: 20251117_initial_schema.py
app/: config.py  database.py  main.py
app/models/: __init__.py  calon_mahasiswa.py  jalur_masuk.py  program_studi.py
app/routers/: master_data.py  pmb.py
app/schemas/: __init__.py
app/utils/: nim_generator.py  validators.py
migrations/versions/: 20251116_add_nim.py  20251116_create_nim_counters.py  20251116_create_pmb_tables.py
static/: index.html
tests/: test_pmb.py  test_utils.py
